@@ -1,3 +1,10 @@
+2004-07-23 13:10 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridmove.c (gridmoveElasticRelaxationStartStep) Set R to be
+	a constant 1.0 for all elements. This value did the best at
+	rotating an isotropic tet. Previously it was 1.0/volume which
+	could be less than one for large tets.
+
 2004-07-22 14:10 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridmove.c (gridmove*MPITest) made Initialize and Complete
